--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://images-ext-2.discordapp.net/external/wYY9-rZ-KohOepehFEtz9QFHL5G1mQPi3pNZ2OHJqlY/%3Fwidth%3D677%26height%3D677/https/media.discordapp.net/attachments/311192345049825282/314185283950084097/Silverdawn.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Emp's Characters</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
